# employee-appraisal-platform

./: .gitignore  CHANGELOG.md  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
designs/: evaluation-model-db-thinking.md
evaluation_platform/: settings.py  urls.py
evaluation_platform/users/: admin.py  models.py  urls.py  views.py
evaluation_platform/users/migrations/: 0001_initial.py
evaluation_platform/users/templates/users/: base.html  home.html  login.html  profile.html
src/employee_appraisal_platform/: __init__.py  manage.py
src/employee_appraisal_platform/appraisal_platform_backend/: asgi.py  settings.py  urls.py  wsgi.py
src/staff_perfomance_evaluation_platform/: __init__.py  manage.py
src/staff_perfomance_evaluation_platform/evaluation_platform_backend/: asgi.py  settings.py  urls.py  wsgi.py
src/staff_perfomance_evaluation_platform/evaluation_platform_backend/users/: admin.py  apps.py  models.py  urls.py  views.py
src/staff_perfomance_evaluation_platform/evaluation_platform_backend/users/migrations/: 0001_initial.py  0002_customuser_age_customuser_date_hired_and_more.py  0003_remove_customuser_years_of_service_and_more.py
src/staff_perfomance_evaluation_platform/evaluation_platform_backend/users/templates/users/: base.html  profile.html
