[project]
name = "staff-perfomance-evaluation-platform"
version = "0.2.0"
description = "Add your description here"
dependencies = [
    "django>=5.1.1",
    "django-extensions>=3.2.3",
    "werkzeug>=3.0.4",
    "django-environ>=0.11.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "commitizen>=3.29.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/employee_appraisal_platform"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
